[package]
name = "network-sharding-demo"
version = "0.1.0"
authors = ["guoxbin <guobin@bit-rock.com>"]
edition = "2018"

[dependencies]
structopt = "0.2"
exit-future = "0.1"
futures = "0.1"
libp2p = { version = "0.7.0", default-features = false, features = ["secio-secp256k1", "libp2p-websocket"] }
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
log = "0.4"
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.2", default-features = false, features = ["codec"]}
secp256k1 = {version="0.12", default-features = false, features = ["rand"]}
env_logger = "0.6"
app_dirs = "1.2"
clap = "~2.32"
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
serde_json = "1.0"
jsonrpc-core = "10.0.1"
jsonrpc-pubsub = "10.0.1"
jsonrpc-derive = "10.0.2"
jsonrpc-core-client = "12.0.0"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-http-server = "10.0.1"
tokio-stdin-stdout = "0.1"
smallvec = "0.6"
void = "1"

[features]
default = ["std"]
std = [
    "primitive-types/std",
]